# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.488 2005/11/20 17:24:33 codeman Exp $

*GLI-0.3 (27 Oct 2005)

  20 Nov 2005; Preston Cody <codeman@gentoo.org>
  converted gli-dialog to use the install_package_list.
  gtkfe has already been converted by AllanonJL
  
  19 Nov 2005; Preston Cody <codeman@gentoo.org>
  get_install_package_list added to InstallProfile.  This can be used by the FEs

  17 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  call ls with '-1 --color=no'

  16 Nov 2005; Preston Cody <codeman@gentoo.org>
	added warning (#9) to GRP ppl about stage3 tarballs

  15 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  change fat32/fat16 to vfat in mount_local_partitions() so mount doesn't get
  confused

  13 Nov 2005; Preston Cody <codeman@gentoo.org>
  removed protocols from rc.conf screens
  finished initial rc.conf and make.conf in webgli
  
  13 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/gliserv.py:
  add -h option to usage()
  show time and request URI in debug mode
  show client IP in debug mode
  just use IP instead of trying to do a reverse lookup

  12 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/gliserv.py:
  'classier' 401 message
  proper commandline parsing
  help via -h
  user/pass can be specificed via commandline option

  11 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/gliserv.py:
  basic HTTP auth

  10 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/gliserv.py:
  dynamic module reloading (yipee!)
  send 'Last-Modified' header for real files
  respond to HEAD with just headers
  src/net/server/handlers/WebGLIHandler.py:
  icons for drives

  7 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
  src/net/server/handlers/WebGLIHandler.py:
  initial 'pretty' partition table display support